hard-gists/df47cd6aea9eeac153ff/run.log
=== Docker Run Log for df47cd6aea9eeac153ff ===
Started at: Mi 29. Okt 20:37:33 CET 2025

[2025-10-29 20:37:33] START: Running container for df47cd6aea9eeac153ff
[2025-10-29 20:37:34] SUCCESS: Container b4d8e236eec72f9d6cdfbe89fb11bf0398b5658a24cf3185ce759ab8beaf6c52 started for df47cd6aea9eeac153ff
=== Container logs for df47cd6aea9eeac153ff ===
  File "/snippet.py", line 45
    print "usage: {0} <function> [arguments]"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for df47cd6aea9eeac153ff ===
[2025-10-29 20:37:36] INFO: Container b4d8e236eec72f9d6cdfbe89fb11bf0398b5658a24cf3185ce759ab8beaf6c52 has stopped
